==> gnunicky/project_rai_nucleo_stm32f411re_hal/magnetic_core_memory_hal/magnetic_core_memory.c <==
#include "main.h"
#include <string.h>
  #define PUTCHAR_PROTOTYPE int __io_putchar(int ch)
  #define PUTCHAR_PROTOTYPE int fputc(int ch, FILE *f)
#define		ADDRSIZE	5
#define		WORDSIZE	(1 << ADDRSIZE)

void write_bit(int n, const int v)
{
/* This function writes 0 or 1 in the selected core of the Memory Array. It is
   a basic routine called from write_word(). */

 int q, r;

  if (v == 0)
  {
       HAL_GPIO_WritePin(GPIOA, GPIO_PIN_9, GPIO_PIN_RESET);
  }
  else
  {
       HAL_GPIO_WritePin(GPIOA, GPIO_PIN_9, GPIO_PIN_SET);
  }
/* At this stage it is clear whether 0 or 1 is to be written in the selected
   core. */

  q = n / 2;
  r = n % 2;
  if (r == 1)
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_SET);
  else
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_RESET);
/* This if-then structure and the following 4 are used to set the appropriate
   pin to address the selected core to be written. */ 

  n = q;
  q = n / 2;
  r = n % 2;
  if (r == 1)
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_5, GPIO_PIN_SET);
  else
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_5, GPIO_PIN_RESET);
  
  n = q;
  q = n / 2;
  r = n % 2;
  if (r == 1)
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_4, GPIO_PIN_SET);
  else
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_4, GPIO_PIN_RESET);
  
  n = q;
  q = n / 2;
  r = n % 2;
  if (r == 1)
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_10, GPIO_PIN_SET);
  else
   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_10, GPIO_PIN_RESET);
  
  n = q;
  q = n / 2;
  r = n % 2;
  if (r == 1)
   HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, GPIO_PIN_SET);
  else
   HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, GPIO_PIN_RESET); 
/* Now we are ready to write 0 or 1 in the selected core. */

  HAL_GPIO_WritePin(GPIOA, GPIO_PIN_10, GPIO_PIN_RESET);
  HAL_GPIO_WritePin(GPIOA, GPIO_PIN_10, GPIO_PIN_SET);  
  timing_delay_us(565);
  HAL_GPIO_WritePin(GPIOA, GPIO_PIN_10, GPIO_PIN_RESET);
  timing_delay_us(565);
}

int read_bit(const int n)
{
/* This function reads the selected core of the Memory Array. It is a basic
   routine called from read_word(). */ 

  write_bit(n, 0);
  if (HAL_GPIO_ReadPin(GPIOC, GPIO_PIN_7)==1) 
  {
    write_bit(n, 1);
    return 1;
   }
   else
   {
    return 0;
   }
}

static void R_test()
{
/* This routine, calling read_word(), displays the content of the entire
   Memory Array. */

 unsigned long d = read_word();
 printf("\n\r Core data read: "); 
 printf(" 0x%lx",d); 
 printf(" =>"); 
 long_to_binary(d);  
}

static void W_test()
{
/* The function, calling write_word(), Writes the desired value, max 32 bits,
   on the Memory Array. */

  char ch[9];
  int i=0;
  unsigned long d = 0;
  printf("\n\r Please enter 8 hexadecimal digits: \n\r"); 
  ch[8]='\0'; 
  uartstatus=HAL_UART_Receive(&UartHandle, (uint8_t *)&ch, 8, 0xFFFF);
  if (uartstatus != HAL_TIMEOUT){
  for(i = 0; i <= 7; i++)
  {
    d <<= 4;
    if('0' <= ch[i] && ch[i] <= '9')
    {
      d += ch[i] - '0'; 
    }
    else if('A' <= ch[i] && ch[i] <= 'F')
    {
      d += ch[i] - 'A' + 10;
    }
    else if('a' <= ch[i] && ch[i] <= 'f')
    {
      d += ch[i] - 'a' + 10;
    }
    else
    {
      printf("\n\r Assuming 0 for non-hexadecimal digit: %c \r\n",ch[i]);    
    }
    }
    write_word(d);
    printf("\n\r Core data write: "); 
    printf(" 0x%lx",d); 
    printf(" =>"); 
    long_to_binary(d);
    } 
    else printf("\n\r TIMED OUT!!\n\r");
}

static void w_test()
{
/* This routine, calling write_bit(), writes 0 or 1 on the desired core, from
   0 to 31. */

  char ch[6];
  int i, a = 0; 
  printf("\n\r Please enter address of bit to write: \n\r");
  uartstatus=HAL_UART_Receive(&UartHandle, (uint8_t *)&ch, 5, 0xFFFF);
  ch[5]='\0'; 
  if (uartstatus != HAL_TIMEOUT){
   for(i = 0; i < ADDRSIZE; i++)
   {
    a <<= 1;
    if(ch[i] != '0') // Assert ch == '1'
    {
      a += 1;
    }
   } 
  } else { 
    printf("\n\r TIMED OUT!!\n\r");
    return;  
  }
  printf("\n\r Please enter bit to write: \n\r");   
  uartstatus=HAL_UART_Receive(&UartHandle, (uint8_t *)&ch,1, 0xFFFF);
  ch[1]='\0';
  if (uartstatus != HAL_TIMEOUT){
  printf("\n\r Core data write to address: "); 
  address_to_binary (a);
  printf(" value ");
  if(ch[0] == '0')
  {
    write_bit(a, 0);
    printf("0 \n\r");
  }
  else // Assert ch == '1'
  {
    write_bit(a, 1);
    printf(" 1 \n\r");
  }
 } else printf("\n\r TIMED OUT!!\n\r");
}

static void r_test()
{
/* The function, calling read_bit(), reads the desired core, from 0 to 31. */

  char ch[6];
  int i, a = 0; 
  printf("\n\r Please enter address of bit to read: \n\r");
  uartstatus=HAL_UART_Receive(&UartHandle, (uint8_t *)&ch, 5, 0xFFFF);
  ch[5]='\0';   
  if (uartstatus != HAL_TIMEOUT){  
  for(i = 0; i < ADDRSIZE; i++)
  {
    a <<= 1;
    if(ch[i] != '0') // Assert ch == '1'
    {
      a += 1;
    }
  }  
  printf("\n\r Core data read from address: ");
  address_to_binary(a);
  printf(" found: ");
  printf(" %d\n\r",read_bit(a));
 }  
 else
   printf("\n\r TIMED OUT!!\n\r");
}

void USART2_Configuration(void)
{
/* In this function, USART2 is configured and initialized. */

  /* Put the USART peripheral in the Asynchronous mode (UART Mode) */
  /* UART1 configured as follow:
      - Word Length = 8 Bits
      - Stop Bit = One Stop bit
      - Parity = None parity // ODD parity
      - BaudRate = 115200 baud // 9600 baud
      - Hardware flow control disabled (RTS and CTS signals) */
  UartHandle.Instance          = USARTx;
  UartHandle.Init.BaudRate     = 115200; 
  UartHandle.Init.WordLength   = UART_WORDLENGTH_8B;
  UartHandle.Init.StopBits     = UART_STOPBITS_1;
  UartHandle.Init.Parity       = UART_PARITY_NONE; 
  UartHandle.Init.HwFlowCtl    = UART_HWCONTROL_NONE;
  UartHandle.Init.Mode         = UART_MODE_TX_RX;
  //UartHandle.Init.OverSampling = UART_OVERSAMPLING_16; 
  if(HAL_UART_Init(&UartHandle) != HAL_OK)
  {
    /* Initialization Error */
    Error_Handler(); 
  }
}

void GPIO_Configuration(void)
{
/* In this function GPIOs are configured and initialized. */

  // Enable GPIOA Clock (to be able to program the configuration registers) 
   __HAL_RCC_GPIOA_CLK_ENABLE();
  // Configure PA05 IO in output external LED2 - Green.
  // Configure PA10 IO in output D2 PIN ARDUINO
  // Configure PA08 IO in output D7 PIN ARDUINO  
  // Configure PA09 IO in output D8 PIN ARDUINO   
  GPIO_InitStruct_A.Pin = GPIO_PIN_10 | GPIO_PIN_8 | GPIO_PIN_9;
  GPIO_InitStruct_A.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct_A.Pull = GPIO_PULLDOWN;
  GPIO_InitStruct_A.Speed = GPIO_SPEED_FAST;
  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct_A); 
  HAL_GPIO_WritePin(GPIOA, GPIO_PIN_10, GPIO_PIN_RESET);
  
  // Enable GPIOB Clock (to be able to program the configuration registers) 
   __HAL_RCC_GPIOB_CLK_ENABLE();
  // Configure PB03 IO in output D3 PIN ARDUINO  
  // Configure PB05 IO in output D4 PIN ARDUINO  
  // Configure PB04 IO in output D5 PIN ARDUINO   
  // Configure PB10 IO in output D6 PIN ARDUINO 
  GPIO_InitStruct_B.Pin = GPIO_PIN_3 | GPIO_PIN_5 | GPIO_PIN_4 | GPIO_PIN_10;
  GPIO_InitStruct_B.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct_B.Pull = GPIO_PULLDOWN; 
  GPIO_InitStruct_B.Speed = GPIO_SPEED_FAST;
  HAL_GPIO_Init(GPIOB, &GPIO_InitStruct_B);
 
  // Configure PC07 IO in output D9 PIN ARDUINO
  __HAL_RCC_GPIOC_CLK_ENABLE();
  GPIO_InitStruct_C.Pin = GPIO_PIN_7;
  GPIO_InitStruct_C.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct_C.Pull = GPIO_PULLDOWN; 
  GPIO_InitStruct_C.Speed = GPIO_SPEED_FAST;
  HAL_GPIO_Init(GPIOC, &GPIO_InitStruct_C);
}

int main(void)
{
  /* STM32F4xx HAL library initialization:
       - Configure the Flash prefetch, instruction and Data caches
       - Configure the Systick to generate an interrupt each 1 msec
       - Set NVIC Group Priority to 4
       - Global MSP (MCU Support Package) initialization
  */
  HAL_Init();
  
  /* Configure the system clock to 100 MHz */
  SystemClock_Config();
   
  /* Configure the UART peripheral */
  USART2_Configuration(); 

  /* Configure the GPIOs */
  GPIO_Configuration();

  timing_enable();

  printf("\n\rWelcome! If you're new, try using the commands 'r', 'w', 't', 'R', 'W' to get started.\n\r"); 
  
  /* Infinite loop */ 
  while (1)
  {
   uartstatus = HAL_UART_Receive(&UartHandle, (uint8_t *)&option, 1, 0xFFFF);
   if (uartstatus != HAL_TIMEOUT)
   {
/* We test whether timeout has expired. */
    switch (option) 
    {
/* We test which command is to be executed. */
      case 'w':
        w_test();
        break;
      case 'r':  
        r_test();
        break;
      case 'W':
        W_test();
        break;
      case 'R':  
        R_test();
        break;
      case 't':  
        t_test();
        break; 
      default:
        printf("\n\r Ignoring unknown command: %c \n\r", option);
    }
   } 
  }
}
